--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ POSTGRES_PASSWORD=
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_URL=http://localhost:3000
+RESEND_API_KEY=
